# DX_autoaim

./: readme.md  ros2_compile.sh
armor/include/: AimAuto.hpp
ros2/: README.md
ros2/src/rm_camera_bingup/: CMakeLists.txt  package.xml
ros2/src/rm_camera_bingup/launch/: hk_camera.launch.py  video_player.launch.py
ros2/src/rm_camera_bingup/src/: video_image_node.cpp
ros2/src/rm_comm_ros2/: CMakeLists.txt
ros2/src/rm_dx_vision/: CMakeLists.txt
ros2/src/rm_dx_vision/launch/: armor_node.launch.py
ros2/src/rm_dx_vision/src/: AimAuto.cpp  armor_node.cpp
