<?xml version="1.0"?>
<package format="3">
  <name>rm_camera_bingup</name>
  <version>0.0.1</version>
  <description>ROS2 package that wraps HikRobot camera driver and publishes images.</description>
  <maintainer email="maintainer@example.com">maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>OpenCV</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>OpenCV</exec_depend>

  <export>
  </export>
</package> 